@@ -1,3 +1,8 @@
+Mon Nov 03 10:59:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimPrefsDialog.cpp:
+	  - Fix icons in the preferences dialog.
+
 Mon Nov 03 10:40:15 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountsWindow.cpp:
